Another alignment fix

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -30,7 +30,7 @@ body {
 }
 
 .text-vertical-center h2 {
-    margin: 8.0em;
+    margin-right: 4.0em;
     padding: 0;
     font-size: 3.0em;
     font-weight: 300;
